// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications: reducer applications reset selected app 1`] = `
Object {
  "applications": Array [],
  "error": null,
  "hash": null,
  "selectedApp": null,
}
`;

exports[`Applications: reducer applications select app 1`] = `
Object {
  "applications": Array [],
  "error": null,
  "hash": null,
  "selectedApp": Object {
    "address": "38a757f8a75453346dcb8149d52df09549f25562",
    "appName": "Simple_storage_DApp",
    "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
    "hash": "e80b681c42f831ea3c4b8db531f5e165",
    "host": "stratodev.blockapps.net",
    "maintainer": "BlockApps info@blockapps.net",
    "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
    "version": "0.0.1",
  },
}
`;

exports[`Applications: reducer fetch applications on failure 1`] = `
Object {
  "applications": Array [],
  "error": "Error fetch app",
  "hash": null,
}
`;

exports[`Applications: reducer fetch applications on success 1`] = `
Object {
  "applications": Array [
    Object {
      "address": "38a757f8a75453346dcb8149d52df09549f25562",
      "appName": "Simple_storage_DApp",
      "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
      "hash": "e80b681c42f831ea3c4b8db531f5e165",
      "host": "stratodev.blockapps.net",
      "isLoading": false,
      "maintainer": "BlockApps info@blockapps.net",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "url": "/apps/e80b681c42f831ea3c4b8db531f5e165/",
      "version": "0.0.1",
    },
    Object {
      "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
      "appName": "lottery-demo-app",
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "hash": "1e743d5cf460f28be290a8a5d8212bf9",
      "host": "stratodev.blockapps.net",
      "isLoading": false,
      "maintainer": "BlockApps Inc",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "url": "/apps/1e743d5cf460f28be290a8a5d8212bf9/",
      "version": "0.1.0",
    },
    Object {
      "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
      "appName": "lottery-demo-app-meetup",
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "hash": "2598425af6cc43ea45098148e11452f0",
      "host": "stratodev.blockapps.net",
      "isLoading": false,
      "maintainer": "BlockApps Inc",
      "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
      "url": "/apps/2598425af6cc43ea45098148e11452f0/",
      "version": "0.1.1",
    },
  ],
  "error": null,
  "hash": null,
}
`;

exports[`Applications: reducer launch app on failure 1`] = `
Object {
  "applications": Array [
    Object {
      "address": "38a757f8a75453346dcb8149d52df09549f25562",
      "appName": "Simple_storage_DApp",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
      "error": null,
      "hash": "e80b681c42f831ea3c4b8db531f5e165",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps info@blockapps.net",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.0.1",
    },
    Object {
      "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
      "appName": "lottery-demo-app",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "1e743d5cf460f28be290a8a5d8212bf9",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.1.0",
    },
    Object {
      "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
      "appName": "lottery-demo-app-meetup",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "2598425af6cc43ea45098148e11452f0",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
      "version": "0.1.1",
    },
  ],
  "error": "Error launch app",
  "hash": null,
}
`;

exports[`Applications: reducer launch app on success with diffrent app address 1`] = `
Object {
  "applications": Array [
    Object {
      "address": "38a757f8a75453346dcb8149d52df09549f25562",
      "appName": "Simple_storage_DApp",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
      "error": null,
      "hash": "e80b681c42f831ea3c4b8db531f5e165",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps info@blockapps.net",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.0.1",
    },
    Object {
      "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
      "appName": "lottery-demo-app",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "1e743d5cf460f28be290a8a5d8212bf9",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.1.0",
    },
    Object {
      "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
      "appName": "lottery-demo-app-meetup",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "2598425af6cc43ea45098148e11452f0",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
      "version": "0.1.1",
    },
  ],
  "error": null,
  "hash": null,
}
`;

exports[`Applications: reducer launch app on success with same app address 1`] = `
Object {
  "applications": Array [
    Object {
      "address": "38a757f8a75453346dcb8149d52df09549f25562",
      "appName": "Simple_storage_DApp",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
      "error": null,
      "hash": "e80b681c42f831ea3c4b8db531f5e165",
      "host": "stratodev.blockapps.net",
      "isLoading": false,
      "maintainer": "BlockApps info@blockapps.net",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.0.1",
    },
    Object {
      "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
      "appName": "lottery-demo-app",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "1e743d5cf460f28be290a8a5d8212bf9",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.1.0",
    },
    Object {
      "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
      "appName": "lottery-demo-app-meetup",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "2598425af6cc43ea45098148e11452f0",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
      "version": "0.1.1",
    },
  ],
  "error": null,
  "hash": null,
}
`;

exports[`Applications: reducer launch app with different address 1`] = `
Object {
  "applications": Array [
    Object {
      "address": "38a757f8a75453346dcb8149d52df09549f25562",
      "appName": "Simple_storage_DApp",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
      "error": null,
      "hash": "e80b681c42f831ea3c4b8db531f5e165",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps info@blockapps.net",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.0.1",
    },
    Object {
      "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
      "appName": "lottery-demo-app",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "1e743d5cf460f28be290a8a5d8212bf9",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.1.0",
    },
    Object {
      "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
      "appName": "lottery-demo-app-meetup",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "2598425af6cc43ea45098148e11452f0",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
      "version": "0.1.1",
    },
  ],
  "error": null,
  "hash": null,
}
`;

exports[`Applications: reducer launch app with same address 1`] = `
Object {
  "applications": Array [
    Object {
      "address": "38a757f8a75453346dcb8149d52df09549f25562",
      "appName": "Simple_storage_DApp",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
      "error": null,
      "hash": "e80b681c42f831ea3c4b8db531f5e165",
      "host": "stratodev.blockapps.net",
      "isLoading": true,
      "maintainer": "BlockApps info@blockapps.net",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.0.1",
    },
    Object {
      "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
      "appName": "lottery-demo-app",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "1e743d5cf460f28be290a8a5d8212bf9",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
      "version": "0.1.0",
    },
    Object {
      "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
      "appName": "lottery-demo-app-meetup",
      "applications": Array [
        Object {
          "address": "38a757f8a75453346dcb8149d52df09549f25562",
          "appName": "Simple_storage_DApp",
          "description": "The simplest example of the STRATO decentralized application running on top of the simple storage contract with value setter and getter functions",
          "hash": "e80b681c42f831ea3c4b8db531f5e165",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps info@blockapps.net",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.0.1",
        },
        Object {
          "address": "897559d78c5ecc9a7e3f16fc55151b5f4f33acef",
          "appName": "lottery-demo-app",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "1e743d5cf460f28be290a8a5d8212bf9",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "083c94fdb36c50a044363845a6640da1abfb6cd2",
          "version": "0.1.0",
        },
        Object {
          "address": "082f2b34e213e0c5627e3ac342bbd2ce9e904bbc",
          "appName": "lottery-demo-app-meetup",
          "description": "This apps demonstrates how to create a DApp using the STRATO platform",
          "hash": "2598425af6cc43ea45098148e11452f0",
          "host": "stratodev.blockapps.net",
          "maintainer": "BlockApps Inc",
          "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
          "version": "0.1.1",
        },
      ],
      "description": "This apps demonstrates how to create a DApp using the STRATO platform",
      "error": null,
      "hash": "2598425af6cc43ea45098148e11452f0",
      "host": "stratodev.blockapps.net",
      "maintainer": "BlockApps Inc",
      "owner": "a63cf1216a7005ba01023fae058a45e7493c4fe0",
      "version": "0.1.1",
    },
  ],
  "error": null,
  "hash": null,
}
`;

exports[`Applications: reducer set initial state 1`] = `
Object {
  "applications": Array [],
  "error": null,
  "hash": null,
  "selectedApp": null,
}
`;
